Lint yaml.rst in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,7 @@ jobs:
       - uses: actions/setup-python@v1
       - name: Install dependencies for linting documents
         run: python3 -m pip install docutils pygments
-      - name: Lint restructuredtext.rst
-        run: rst2pseudoxml.py --config=docutils.conf restructuredtext/restructuredtext.rst /dev/null
+      - name: Lint documents
+        run: |
+          rst2pseudoxml.py --config=docutils.conf restructuredtext/restructuredtext.rst /dev/null
+          rst2pseudoxml.py --config=docutils.conf yaml/yaml.rst /dev/null
