--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,5 @@ jobs:
       - name: "Lint documents"
         run: |
           rst2pseudoxml.py --config=docutils.conf restructuredtext/restructuredtext.rst /dev/null
+          rst2pseudoxml.py --config=docutils.conf toml/toml.rst /dev/null
           rst2pseudoxml.py --config=docutils.conf yaml/yaml.rst /dev/null
